--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1374,6 +1374,83 @@ export namespace ISwaggerSecurityScheme {
 
 
 ## Customization
+[Typia > JSON schema > Customization](https://typia.io/docs/json/schema/#customization)
+
+If what you want is not just filling special properties of JSON schema spec, but to adding custom properties into the JSON schema definition, you can accomlish it with `typia` feature. Define a type based on `typia.tags.TagBase`, and specify the `schema` property type as you want.
+
+For reference, the custom property must be started with x- prefix. It's a rule of JSON schema.
+
+<Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
+  <Tab>
+```typescript copy filename="examples/src/json-schema-custom.ts" copy showLineNumbers {7-9, 16-18, 22-23}
+import typia, { tags } from "typia";
+ 
+type Monetary<Value extends string> = tags.TagBase<{
+  target: "number";
+  kind: "monetary";
+  value: Value;
+  schema: {
+    "x-monetary": Value;
+  };
+}>;
+
+type Placeholder<Value extends string> = tags.TagBase<{
+  target: "boolean" | "number" | "string";
+  kind: "placeholder";
+  value: Value;
+  schema: {
+    "x-placeholder": Value;
+  };
+}>;
+
+interface IAccount {
+  code: string & Placeholder<"Write you account code please">;
+  balance: number & Monetary<"dollar">;
+};
+ 
+typia.json.application<[IAccount]>();
+```
+  </Tab>
+  <Tab>
+```javascript copy filename="examples/bin/json-schema-custom.js" showLineNumbers {14, 18}
+({
+  schemas: [
+    {
+      $ref: "#/components/schemas/IAccount",
+    },
+  ],
+  components: {
+    schemas: {
+      IAccount: {
+        type: "object",
+        properties: {
+          code: {
+            type: "string",
+            "x-placeholder": "Write you account code please",
+          },
+          balance: {
+            type: "number",
+            "x-monetary": "dollar",
+          },
+        },
+        nullable: false,
+        required: ["code", "balance"],
+      },
+    },
+  },
+  purpose: "swagger",
+  surplus: false,
+});
+```
+  </Tab>
+</Tabs>
+
+Otherwise you wanna customize the swagger data, utilize the `@SwaggerCustomizer()` decorator.
+
+As you can see from the above example code, callback function defined in the `@SwaggerCustomizer()` decorator is changing the swagger data, because it is called when the `npx nestia swagger` command being executed. Furthermore, it is possible to add plugin property starting with `x-` characters.
+
+In other words, the `@SwaggerCustomizer()` does not affect the runtime behavior of the backend server, but only affects the `swagger.json` file.
+
 <Tabs items={[
     <code>@nestia/core</code>, 
     <code>MyCustomController.ts</code>, 
@@ -1381,7 +1458,7 @@ export namespace ISwaggerSecurityScheme {
   ]} 
   defaultIndex={1}>
   <Tab>
-```typescript
+```typescript filename="@nestia/core" showLineNumbers
 export function SwaggerCustomizer(
   closure: (props: SwaggerCustomizer.IProps) => unknown,
 ): MethodDecorator;
@@ -1405,7 +1482,7 @@ export namespace SwaggerCustomizer {
 ```
   </Tab>
   <Tab>
-```typescript showLineNumbers {7-18}
+```typescript filename="CustomController.ts" showLineNumbers {7-18}
 import { SwaggerCustomizer, TypedParam, TypedRoute } from "@nestia/core";
 import { Controller } from "@nestjs/common";
 import { tags } from "typia";
@@ -1436,7 +1513,7 @@ export class CustomController {
 ```
   </Tab>
   <Tab>
-```json showLineNumbers {2, 44-45, 75-76}
+```json filename="swagger.json" showLineNumbers {2, 44-45, 75-76}
 {
   "openapi": "3.0.11",
   "servers": [
@@ -1530,12 +1607,6 @@ export class CustomController {
 ```
   </Tab>
 </Tabs>
-
-To customize the swagger data, utilize the `@SwaggerCustomizer()` decorator.
-
-As you can see from the above example code, callback function defined in the `@SwaggerCustomizer()` decorator is changing the swagger data, because it is called when the `npx nestia swagger` command being executed. Furthermore, it is possible to add plugin property starting with `x-` characters.
-
-In other words, the `@SwaggerCustomizer()` does not affect the runtime behavior of the backend server, but only affects the `swagger.json` file.
 
 
 
